Merged the schema branch into trunk
git-svn-id: https://svn.apache.org/repos/asf/directory/apacheds/trunk@896599 13f79535-47bb-0310-9956-ffa450edef68