@@ -25,7 +25,7 @@
   <parent>
     <groupId>org.apache.directory.project</groupId>
     <artifactId>project</artifactId>
-    <version>15</version>
+    <version>16</version>
   </parent>
 
   <groupId>org.apache.directory.server</groupId>
@@ -39,7 +39,7 @@
     <distMgmtSiteUrl>scpexe://people.apache.org/www/directory.apache.org/apacheds/gen-docs/${version}/</distMgmtSiteUrl>
 
     <!-- Set versions for depending projects -->
-    <org.apache.directory.shared.version>0.9.17-SNAPSHOT</org.apache.directory.shared.version>
+    <org.apache.directory.shared.version>0.9.18-SNAPSHOT</org.apache.directory.shared.version>
     <skin.version>1.0.0</skin.version>
   </properties>
 
@@ -62,6 +62,12 @@
 
       <dependency>
         <groupId>org.apache.directory.shared</groupId>
+        <artifactId>shared-ldap-schema-manager</artifactId>
+        <version>${org.apache.directory.shared.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.directory.shared</groupId>
         <artifactId>shared-ldap-constants</artifactId>
         <version>${org.apache.directory.shared.version}</version>
       </dependency>
@@ -69,13 +75,13 @@
       <dependency>
         <groupId>org.apache.directory.daemon</groupId>
         <artifactId>daemon-bootstrappers</artifactId>
-        <version>1.1.6</version>
+        <version>1.1.7-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.apache.mina</groupId>
         <artifactId>mina-core</artifactId>
-        <version>2.0.0-M6</version>
+        <version>2.0.0-RC1</version>
       </dependency>
 
       <dependency>
@@ -123,7 +129,7 @@
       <dependency>
         <groupId>commons-pool</groupId>
         <artifactId>commons-pool</artifactId>
-        <version>1.4</version>
+        <version>1.5.2</version>
       </dependency>
 
       <dependency>
@@ -332,27 +338,25 @@
 
   <modules>
     <module>all</module>
-    <module>jdbm</module>
-    <module>bootstrap-extract</module>
-    <module>bootstrap-partition</module>
-    <module>bootstrap-plugin</module>
-    <module>schema-extras</module>
-    <module>schema-bootstrap</module>
     <module>utils</module>
-    <module>schema-registries</module>
+    <module>jdbm</module>
     <module>jdbm-store</module>
+    <module>jdbm-partition</module>
     <module>xdbm-base</module>
     <module>xdbm-search</module>
     <module>xdbm-tools</module>
     <module>core</module>
+    <module>core-api</module>
+    <module>core-annotations</module>
+    <module>server-annotations</module>
+    <module>core-mock</module>
     <module>core-jndi</module>
     <module>core-constants</module>
-    <module>core-shared</module>
-    <module>core-plugin</module>
-    <module>core-unit</module>
     <module>core-integ</module>
     <module>core-entry</module>
     <module>core-avl</module>
+    <module>avl-partition</module>
+    <module>ldif-partition</module>
     <module>protocol-shared</module>
     <module>protocol-ntp</module>
     <module>protocol-ldap</module>
@@ -371,16 +375,17 @@
     -->
 
     <module>server-xml</module>
-    <module>server-unit</module>
     <module>server-jndi</module>
     <module>kerberos-shared</module>
     <!--module>kerberos-unit</module-->
     <module>interceptor-kerberos</module>
+    <module>kerberos-test</module>
     <!--module>syncrepl</module-->
     <module>server-replication</module>
     <module>xbean-spring</module>
     <module>ldap-api-test</module>
     <module>http-integration</module>
+    <module>test-framework</module>
   </modules>
 
   <reporting>
@@ -390,6 +395,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
         <configuration>
+          <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
           <aggregate>true</aggregate>
         </configuration>
       </plugin>
